// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateLayouts - sfc 1`] = `
"
      <script setup>
      import { defineComponent, defineAsyncComponent, ref, watch, markRaw, useSlots, h } from 'vue';
      import { useRoute } from 'vue-router';

      const layout = ref();
      const slots = useSlots();
      const route = useRoute();

      const layouts = {
        __Placeholder: defineComponent(() => () => h('div', slots.default())),
        
      };

      watch(
        () => route.meta?.layout,
        (val) => {
          layout.value = markRaw(layouts[val || '__Placeholder']);
        },
        { immediate: true },
      );
      </script>

      <template>
        <component :is=\\"layout\\"><slot></slot></component>
      </template>
    "
`;

exports[`generateLayouts 1`] = `
"
    import { defineComponent, defineAsyncComponent, ref, watch, markRaw, useSlots, h } from 'vue';
    import { useRoute } from 'vue-router';

    export default defineComponent({
      setup() {
        const layout = ref();
        const slots = useSlots();
        const route = useRoute();

        const layouts = {
          __Placeholder: defineComponent(() => () => h('div', slots.default())),
          
        };

        watch(
          () => route.meta?.layout,
          (val) => {
            layout.value = markRaw(layouts[val || '__Placeholder']);
          },
          { immediate: true },
        );

        return {
          layout,
        };
      },
      render() {
        return h(this.layout, {}, () => this.$slots.default());
      },
    });
  "
`;
